--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,7 @@ user.enabled=enabled
 user.account_non_expired=account non expired
 user.credential_non_expired=credential non expired
 user.account_non_locked=account non locked
-user.authorities=authorities
+user.roles=roles
 user.first_name=first name
 user.last_name=last name
 user.email=email
